@@ -1,3 +1,6 @@
+12-July-2011 Michael Babker Version 1.8 Changes
++ Add script to display the runtime
+
 10-July-2011 Michael Babker Version 1.8 Changes
 + Add SoundManager2 media player
 ~ Add demo MP3 player from SM2 site
